# sber-test-deposit-calculation

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deptry.yml  mypy.yml  pytest.yml
src/: main.py
src/app/: base.py  exception_handlers.py  logger.py
src/config/: __init__.py
src/dependencies/: deposit.py
src/dto/: deposit.py
src/models/: deposit.py
src/routers/: __init__.py  deposit.py
src/schemas/: deposit.py
src/services/: deposit.py
tests/e2e/: conftest.py  test_deposit.py  test_service.py
tests/unit/app/: test_base.py  test_exception_handlers.py  test_logger.py
tests/unit/dependencies/: test_deposit.py
tests/unit/models/: test_deposit.py
tests/unit/routers/: conftest.py  test_deposit.py  test_service.py
tests/unit/schemas/: conftest.py  test_deposit.py
tests/unit/services/: conftest.py  test_deposit.py
