[tool.poetry]
name = "sber-test-deposit-calculation"
version = "0.0.1"
description = "Тестовое задание. Сбер. Сервис для расчета депозита"
authors = [
    "Nikita Paramonov <nikita@nparamonov.ru>"
]
readme = "README.md"
packages = [{include = "src"}]
repository = "https://github.com/nparamonov/sber-test-deposit-calculation"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.110.0"
starlette = ">=0.36.3,<0.37.0"
pydantic = ">=2.6.3,<3.0.0"
uvicorn = "^0.27.1"
uvloop = {version = "0.19.0", markers = "sys_platform == 'linux'"}
colorlog = "^6.8.0"

[tool.poetry.group.tests.dependencies]
mypy = "^1.8.0"
ruff = "^0.3.1"
deptry = "^0.12.0"
pytest = "^8.0.2"
coverage = "^7.4.3"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.5"

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", # flake8-annotations
    "D100", # undocumented-public-module
    "D104", # undocumented-public-package
    "D415", # ends-in-punctuation
    "TD", # flake8-todos
    "FIX", # flake8-fixme
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["src"]
data_file = ".coverage/coverage"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:"
]
show_missing = true

[tool.coverage.html]
directory = ".coverage/htmlcov"

[tool.coverage.xml]
output = ".coverage/coverage.xml"

[tool.coverage.json]
output = ".coverage/coverage.json"

[tool.deptry.per_rule_ignores]
DEP002 = ["uvicorn", "uvloop"]
